Add discord mention query endpoint
